--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,9 +17,11 @@
     "@mui/material": "5.14.20",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
+    "normalize.css": "^8.0.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
