--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,7 +40,8 @@
     "sass": "^1.69.5",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.2",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "license": "MIT"
 }
