--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "5.14.20",
+    "axios": "^1.6.2",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
