--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "5.14.20",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "6",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.33",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
