COD-44: Добавлен ServiceWorker

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,11 +4,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run update-service-worker",
     "preview": "vite preview",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "test": "jest ./"
+    "test": "jest ./",
+    "update-service-worker": "node scripts/update-service-worker.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
