--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,30 +38,32 @@ services:
         POSTGRES_USER: ${POSTGRES_USER}
         POSTGRES_DB: ${POSTGRES_DB}
       restart: always
-#      networks:
-#        - awesome
+      networks:
+        - awesome
       volumes:
         - ./tmp/pgdata:/var/lib/postgresql/data
 
-#    pgadmin:
-#      image: dpage/pgadmin4:4.18
-#      restart: always
-#      environment:
-#        PGADMIN_DEFAULT_EMAIL: admin@admin.com
-#        PGADMIN_DEFAULT_PASSWORD: secret
-#        PGADMIN_LISTEN_PORT: 80
-#      ports:
-#        - "8080:80"
-#      volumes:
-#        - pgadmin-data:/var/lib/pgadmin
-#      depends_on:
-#        - postgres
-#      networks:
-#        - awesome
-#
-#volumes:
-#  pgadmin-data:
-#
-#networks:
-#  awesome:
-#    driver: bridge
+    pgadmin:
+      container_name: pgadmin
+      image: dpage/pgadmin4:4.18
+      restart: always
+      environment:
+        PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+        PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+        PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
+      ports:
+        - "${PGADMIN_PORT}:${PGADMIN_LISTEN_PORT}"
+      volumes:
+        - pgadmin-data:/var/lib/pgadmin
+      depends_on:
+        - postgres
+      networks:
+        - awesome
+
+volumes:
+  pgadmin-data:
+    driver: local
+
+networks:
+  awesome:
+    driver: bridge
