--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.2",
     "emoji-mart": "^5.5.2",
     "eslint-config-prettier": "^8.5.0",
+    "moment": "^2.30.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
