--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,37 @@
 version: "3.9"
 
 services:
-#    client:
-#        container_name: prakticum-client
-#        image: prakticum-client
-#        build:
-#            context: .
-#            dockerfile: Dockerfile.client
-#            args:
-#              CLIENT_PORT: ${CLIENT_PORT}
-#        restart: always
-#        ports:
-#            - "${CLIENT_PORT}:80"
-#        environment:
-#          - CLIENT_PORT=${CLIENT_PORT}
-#          - SERVER_PORT=${SERVER_PORT}
-#    server:
-#        container_name: prakticum-server
-#        image: prackicum-server
-#        build:
-#            context: .
-#            dockerfile: Dockerfile.server
-#            args:
-#              SERVER_PORT: ${SERVER_PORT}
-#        restart: always
-#        ports:
-#            - "${SERVER_PORT}:${SERVER_PORT}"
-#        environment:
-#          SERVER_PORT: ${SERVER_PORT}
+    client:
+        container_name: matchthree-client
+        image: matchthree-client
+        build:
+            context: .
+            dockerfile: Dockerfile.client
+            args:
+              CLIENT_PORT: ${CLIENT_PORT}
+        restart: always
+        ports:
+            - "${CLIENT_PORT}:80"
+        environment:
+          - CLIENT_PORT=${CLIENT_PORT}
+          - SERVER_PORT=${SERVER_PORT}
+
+    server:
+        container_name: matchthree-server
+        image: matchthree-server
+        build:
+            context: .
+            dockerfile: Dockerfile.server
+            args:
+              SERVER_PORT: ${SERVER_PORT}
+        restart: always
+        depends_on:
+          - postgres
+          - client
+        ports:
+            - "${SERVER_PORT}:${SERVER_PORT}"
+        environment:
+          SERVER_PORT: ${SERVER_PORT}
 
     postgres:
       image: postgres:14
