--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,7 +20,8 @@
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.2.1",
     "sequelize": "^6.36.0",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "vite": "3.0.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
