--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
             - "${SERVER_PORT}:${SERVER_PORT}"
         environment:
           SERVER_PORT: ${SERVER_PORT}
-        command: sh -c "sleep 60 && node /app/packages/server/dist/index.js"  # Добавляем задержку в 120 секунд перед запуском сервера
+        command: sh -c "sleep 10 && node /app/packages/server/dist/index.js"
 
     postgres:
       image: postgres:14
