--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -13,6 +13,9 @@ RUN yarn install --frozen-lockfile
 COPY . .
 
 RUN yarn lerna bootstrap
+RUN rm -rf /app/packages/client/dist-ssr/ && yarn build:ssr --scope=client
+RUN rm -rf /app/packages/client/dist/ && yarn build --scope=client
+
 RUN rm -rf /app/packages/server/dist/ && yarn build --scope=server
 
 EXPOSE $SERVER_PORT
