--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -14,6 +14,9 @@ COPY . .
 
 RUN yarn lerna bootstrap
 
+RUN rm -rf /app/packages/client/dist-ssr/ && yarn build:ssr --scope=client
+RUN rm -rf /app/packages/client/dist/ && yarn build --scope=client
+
 RUN rm -rf /app/packages/server/dist/ && yarn build --scope=server
 
 EXPOSE $SERVER_PORT
