--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
             - "${SERVER_PORT}:${SERVER_PORT}"
         environment:
           SERVER_PORT: ${SERVER_PORT}
+          NODE_ENV: production
         command: sh -c "sleep 10 && node /app/packages/server/dist/index.js"
 
     postgres:
