Серверная инфраструктура + фиксы ux/ui багов (#32)
* Тут частично решены эти задания: Сервер в докере, проект развернут на облаке, конфиг nginx раздает сайт

--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -13,15 +13,10 @@ RUN yarn install --frozen-lockfile
 COPY . .
 
 RUN yarn lerna bootstrap
+
+RUN rm -rf /app/packages/client/dist-ssr/ && yarn build:ssr --scope=client
+RUN rm -rf /app/packages/client/dist/ && yarn build --scope=client
+
 RUN rm -rf /app/packages/server/dist/ && yarn build --scope=server
 
-
-FROM node:$NODE_VERSION-buster-slim as production
-WORKDIR /app
-
-COPY --from=builder /app/packages/server/dist/ /app/
-COPY --from=builder /app/packages/server/package.json /app/package.json
-RUN yarn install --production=true
-
 EXPOSE $SERVER_PORT
-CMD [ "node", "/app/index.js" ]
