--- a/.github/workflows/yc.yml
+++ b/.github/workflows/yc.yml
@@ -1,47 +1,24 @@
+name: YC CI
 
-# - name: Deploy COI VM
-#   id: deploy-coi
-#   uses: yc-actions/yc-coi-deploy@v2
-#   env:
-#     CR_REGISTRY: crp00000000000000000
-#     CR_REPOSITORY: my-cr-repo
-#     IMAGE_TAG: ${{ github.sha }}
-#   with:
-#     yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
-#     folder-id: bbajn5q2d74c********
-#     vm-name: yc-action-demo
-#     vm-service-account-id: ajeqnasj95o7********
-#     vm-cores: 2
-#     vm-memory: 2Gb
-#     vm-core-fraction: 100
-#     vm-subnet-id: e9b*********
-#     user-data-path: './user-data.yaml'
-#     docker-compose-path: './docker-compose.yaml'
+on:
+  push:
+    branches: ['features/COD-73-github-action']
 
-
-
-# // actual
-# name: YC CI
-
-# on:
-#   push:
-#     branches: ['features/COD-73-github-action']
-
-# jobs:
-#   docker:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - name: Login to Yandex Cloud Container Registry
-#         id: login-cr
-#         uses: yc-actions/yc-cr-login@v1
-#         with:
-#           yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }} //--- add
-#     - name: Build, tag, and push image to Yandex Cloud Container Registry
-#         env:
-#         CR_REGISTRY: crp00000000000000000 //--- add
-#         CR_REPOSITORY: my-cr-repo //--- add
-#         IMAGE_TAG: ${{ github.sha }} //--- add
-#         run: |
-#         docker build -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG .
-#         docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
+jobs:
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Yandex Cloud Container Registry
+        id: login-cr
+        uses: yc-actions/yc-cr-login@v1
+        with:
+          yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
+      - name: Build, tag, and push image to Yandex Cloud Container Registry
+        env:
+        CR_REGISTRY: crpn9mnggobsk72cbsih
+        CR_REPOSITORY: MatchThree
+        IMAGE_TAG: ${{ github.sha }}
+        run: |
+        docker build -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG .
+        docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
