--- a/.github/workflows/yc.yml
+++ b/.github/workflows/yc.yml
@@ -20,5 +20,5 @@ jobs:
         CR_REPOSITORY: MatchThree
         IMAGE_TAG: ${{ github.sha }}
         run: |
-        docker build -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG .
-        docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
+          docker build -t cr.yandex/$CR_REGISTRY/$CR_REPO:$IMAGE_TAG .
+          docker push cr.yandex/$CR_REGISTRY/$CR_REPO:$IMAGE_TAG
