--- a/.github/workflows/yc.yml
+++ b/.github/workflows/yc.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build, tag, and push image to Yandex Cloud Container Registry
         env:
           CR_REGISTRY: crpn9mnggobsk72cbsih
-          CR_REPO: MatchThree
+          CR_REPO: matchthree
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t cr.yandex/$CR_REGISTRY/$CR_REPO:$IMAGE_TAG .
