--- a/.github/workflows/yc.yml
+++ b/.github/workflows/yc.yml
@@ -19,4 +19,6 @@ jobs:
           CR_REGISTRY: crpn9mnggobsk72cbsih
           CR_REPO: matchthree
           IMAGE_TAG: ${{ github.sha }}
-        run: docker-compose -f "docker-compose.yml" up -d --build
+        run: |
+          docker build -f Dockerfile.server -t cr.yandex/$CR_REGISTRY/$CR_REPO:$IMAGE_TAG .
+          # docker push cr.yandex/$CR_REGISTRY/$CR_REPO:$IMAGE_TAG
